--- a/css/main.css
+++ b/css/main.css
@@ -96,22 +96,22 @@ textarea {
  /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+html, body {
+  height: 100vh;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  flex-shrink: 0;
+}
+.header {
+  flex-shrink: 0;
+}
  /* ==========================================================================
    Helper classes
    ========================================================================== */
