--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,12 @@ textarea {
  /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+@media only screen and (min-width: 600px) {
+  .w3-content {
+    max-width: 1200px;
+  }
+}
+
 html, body {
   height: 100vh;
 }
